<resources>
    <string name="app_name">N7ool</string>
    <string name="trips">Trips</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="login">Login</string>
    <string name="welcome">Welcom</string>
    <string name="train">Train</string>
    <string name="cars">Cars</string>
    <string name="Plan">Plan</string>
    <string name="forignTrips">Foreign trips</string>
    <string name="domisticFlight">Domestic flights</string>
    <string name="addTrip">Add trip</string>
    <string name="addShipment">Add shipment</string>
    <string name="chooseFlightMethod">Choose a flight method</string>
    <string name="alert">Alert !!</string>
    <string name="completeData">Please complete the necessary procedures to activate \nthe Add Trip feature</string>
    <string name="completeProcedures">Complete the procedures</string>
    <string name="departure_point">Departure point</string>
    <string name="arrivalPoint">Arrival point</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_time">Departure time</string>
    <string name="arrival_date">Arrival date</string>
    <string name="arrival_time">Arrival time</string>
    <string name="kiloGram">KG</string>
    <string name="notes">Notes</string>
    <string name="createTrip">Create trip</string>
    <string name="shipmentType">Shipment type</string>
    <string name="document">Document</string>
    <string name="packagee">Package</string>
    <string name="specified">Specified</string>
    <string name="shipmentWeight">The weight of the shipment</string>
    <string name="deliveryTime">Delivery time</string>
    <string name="shipmentImage">Shipment image</string>
    <string name="recipientData">Recipient data</string>
    <string name="recipientName">The recipient\'s name</string>
    <string name="recipientMobile">The recipient\'s mobile number</string>
    <string name="createOrder">Create order</string>
    <string name="addOffer">Add offer</string>
    <string name="requiredPrice">Required price</string>
    <string name="sendOffer">Send offer</string>
    <string name="joinTrip">Join trip</string>
    <string name="fullName">Full name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="register">Register</string>
    <string name="empty">Empty</string>
    <string name="passwordNotMAtches">Password not matches</string>
    <string name="userCreatedSuccessfully">User created successfully</string>
    <string name="createAccount">Create account</string>
    <string name="forgetPassword">Forget password</string>
    <string name="errorInEmailOrPass">Error in phone or password</string>
    <string name="accountCreated">"Account created "</string>
    <string name="tripIsAdded">Trip is added successfully</string>
    <string name="selectPackageType">Please select package type</string>
    <string name="orderAddedSuccessfully">Shipment added successfully</string>
    <string name="joinAsCarrier">Join as a carrier</string>
    <string name="editImage">Edit image</string>
    <string name="nationalId">National Id</string>
    <string name="city">City</string>
    <string name="join">Join Now</string>
    <string name="pleaseAddImage">Please select your image first</string>
    <string name="youJoinedAsTransporter">You joined as transporter successfully</string>
    <string name="Trip_type">"Trip type "</string>
    <string name="joinedSuccess">"Your request has been successfully received, and you will be notified through alerts if the representative is accepted "</string>
    <string name="errorPleaseTryAgain">Error please try again</string>
    <string name="hour">Hour</string>
    <string name="meetingPoint">"Meeting point "</string>
    <string name="myOrders">My orders</string>
    <string name="pending">Pending</string>
    <string name="Active">Active</string>
    <string name="Finished">Finished</string>
    <string name="myTrips">My trips</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="aboutNa7ol">About na7ol</string>
    <string name="terms">Conditions and terms</string>
    <string name="tech">Technical support</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="messageSent">Message sent successfully we will see it as soon as possible</string>
    <string name="errorUrl">Error url</string>
    <string name="notificationSettings">Notifications settings</string>
    <string name="personalProfile">Personal profile</string>
    <string name="editPass">Edit pass</string>
    <string name="passwordChangedSuccessfully">Password changed successfully</string>
    <string name="contract">Contract</string>
    <string name="addShipmentCode">Add the shipment code</string>
    <string name="enterCode">Enter code here</string>
    <string name="Copy_the_delivery_code">Copy the delivery code</string>
    <string name="newNotifications">New Notification</string>
    <string name="Deliverymechanism">Delivery mechanism</string>
    <string name="pleaseSelectPackageType">Please select package type</string>
    <string name="travellerName">Traveller name</string>
    <string name="Conductivity_value">Conductivity value</string>
    <string name="cancelOrder">Cancel order</string>
    <string name="editOrder">Edit order</string>
    <string name="priceOffers">Price offers</string>
    <string name="sendMessage">Send message</string>
    <string name="contractTerms">Contrace terms</string>
    <string name="rateTraveller">Rate traveller</string>
    <string name="priceOfferAccepted">Price offer accepted successfully</string>
    <string name="attachImage">Attach Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="loading">Loading...</string>
    <string name="messageHere">Message here..</string>
    <string name="acceptTerms">Accept terms and conditions</string>
    <string name="contin">Continue</string>
    <string name="importantCou">Important Cautions</string>
    <string name="isuuingContract">Issuing the contract</string>
    <string name="contractText">Contract text</string>
    <string name="contractSentSuccessfully">Contract send successfully</string>
    <string name="cancelTrip">Cancel trip</string>
    <string name="editTrip">Edit trip</string>
    <string name="joinRequests">Join requests</string>
    <string name="ClientData">Client data</string>
    <string name="youAcceptToDeliver">You accept to deliver this order</string>
    <string name="shipmentEdited">You edit shipment successfully</string>
    <string name="cancelJoinRequests">Cancel join request</string>
    <string name="editJoinRequest">Edit join request</string>
    <string name="youCanceledTripSuccessfully">You canceled this trip successfully</string>
    <string name="writeComment">Write comment</string>
    <string name="rateUser">Thank you for handing in the shipment, please rate the customer</string>
    <string name="thanks">You rating user successfully , thanks for your time</string>
    <string name="deliverShipment">Deliver the shipment</string>
    <string name="travellerRating">Traveller rate</string>
    <string name="confirm">Confirm</string>
    <string name="chooseLanguage">Choose language</string>
    <string name="attachment">Attachment</string>
    <string name="search">Search</string>
    <string name="searchFilter">Search filter</string>
    <string name="logout">Logout</string>
    <string name="charge">Charge</string>
    <string name="totalCharge">Total charge</string>
    <string name="applicationComm">Application commission</string>
    <string name="remainingBalance">The remaining balance</string>
    <string name="Balancewithdrawal">Balance withdrawal</string>
    <string name="pay">Pay commition</string>
    <string name="invalidEmail">In valid email address</string>
    <string name="phoneError">Phone must be more than 10 charachter</string>
    <string name="pleaseSelctTravelType">Please select shipment way</string>
    <string name="flightMethod">Flight method</string>
    <string name="downloadOurApp">Download our app</string>
    <string name="editShipment">Edit shipment</string>
    <string name="edit">Edit</string>
    <string name="tripsEdited">Trip edited successfully</string>
    <string name="rate">Rate</string>
    <string name="errorCode">"Error code "</string>
    <string name="passwordReset">Password retrieved successfully</string>
    <string name="enterPhone">Enter phone to send the password recovery code</string>
    <string name="sendCode">Send code</string>
    <string name="enterPhoneCode">We have sent you an SMS with the verification code on the number</string>
    <string name="recoverPassword">Recover password</string>
    <string name="enterNewPass">Password Reset</string>
    <string name="newPassword">New password</string>
    <string name="confirmNewPassword">Confirm new password</string>
    <string name="joinedSuccessToOrder">Your request has been successfully sent, and you will be notified through alerts if the client is accepted</string>
    <string name="yourPriceSent">Your price offer has been successfully received, and you will be notified through alerts if the client is accepted</string>
    <string name="pleaseEnterDate">Please enter departure date before arrival date</string>
    <string name="save">Save</string>
    <string name="profileUpdatedSuccessfully">Profile updated successfully</string>
    <string name="orderSent">Your request has been sent successfully</string>
    <string name="dataWillBeReviewed">Your data will be reviewed by the administration of the application. You will be contacted with the status of your request as soon as possible</string>
    <string name="editPrice">Edit price</string>
    <string name="bidUpdated">Bid has been successfully modified</string>
    <string name="enterValidIdentityId">Please enter valid National id</string>
    <string name="youShouldAddShipmentImage">You should add shipment image</string>
    <string name="NotificationIsUpdated">Notification setting is updated successfully</string>
    <string name="identityImage">Image of the national identity</string>
    <string name="pleaseSelectDifferentCities">Please select different cities</string>
    <string name="youMustJoinAsCarrier">You must join as carrier</string>
    <string name="codeCopiedSuccessfully">Code copied successfully</string>
    <string name="youCannotJoinToyourTrip">You cannot join to your trip</string>
    <string name="youCannotAddOfferTo">You cannot add offer to your order</string>
    <string name="enterCorrectCode">Please enter the correct code</string>
    <string name="messageText">Message text</string>
    <string name="offerMustBeGreaterThanLimit">Offer must be greater than limit. Limit is :</string>
    <string name="done">Done</string>
    <string name="day">Day</string>
    <string name="acceptThisOrder">Do you want to accept this order ?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseAcceptTerms">"Please accept all terms "</string>
    <string name="price">Price</string>
    <string name="joinRequestsCanceled">Join request canceled successfully</string>
    <string name="all">All</string>
    <string name="passwordMustBeGreaterThan">Password must be greater than 6 digits</string>
    <string name="tripCanceledSuccessfully">Trip canceled successfully</string>
    <string name="startWith">(start with 966)</string>
    <string name="noExistingCities">No available cities</string>
    <string name="nameMustNotHaveNumber">Name must not have numbers</string>
</resources>